--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "js-abci",
-  "version": "0.1.1",
-  "description": "Javascript ABCI libraries",
-  "main": "index.js",
-  "dependencies": {
-    "protobufjs": "~5.0.1",
-    "js-wire": "~0.0.3"
-  }
+	"name": "js-abci",
+	"version": "0.1.1",
+	"description": "Javascript ABCI libraries",
+	"main": "index.js",
+	"scripts": {
+		"test": "./node_modules/mocha/bin/mocha"
+	},
+	"dependencies": {
+		"axios": "^0.17.1",
+		"js-wire": "~0.0.3",
+		"protobufjs": "~5.0.1"
+	},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"chai-http": "^3.0.0",
+		"eslint": "^4.15.0",
+		"eslint-config-prettier": "^2.9.0",
+		"eslint-config-standard": "^11.0.0-beta.0",
+		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-node": "^5.2.1",
+		"eslint-plugin-prettier": "^2.4.0",
+		"eslint-plugin-promise": "^3.6.0",
+		"eslint-plugin-standard": "^3.0.1",
+		"mocha": "^4.1.0",
+		"prettier": "^1.10.2"
+	}
 }
